fixed font size on mobile, changed header border, and fixed meta data in post

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -113,7 +113,7 @@ p img {
     z-index: 1000;
     background-image: linear-gradient(120deg, #4b00a3, #9b1c31);
     background-color: #4b0063;
-    border: 3px solid #4b0063;
+    border: 1px solid #000;
 }
 
 .date {
@@ -157,6 +157,12 @@ aside.banner-ad.left {
     max-width: 100%;
     height: auto;
     display: block;
+}
+
+@media (max-width: 1200px) {
+    h1#top {
+        font-size: 3rem;
+    }    
 }
 
 @media (max-width: 2080px) {
